# comp-methods-rvv

./: .gitmodules  CMakeLists.txt  README.md
cmake/: common.cmake  riscv64-linux-gcc.cmake
include/: comp_methods.h  comp_methods_ref.h  comp_methods_rvv.h
interpolation/generic/: lagrange.c  newton_equal_nodes_back.c  newton_equal_nodes_forward.c  newton_unequal_nodes.c  spline_lin.c
interpolation/rvv/: lagrange.c
perf/: CMakeLists.txt  interpolation.cpp  slam.cpp
perf/include/: perf.h
perf/interpolation/: perf_lagrange.cpp  perf_newton_equal.cpp  perf_newton_unequal.cpp  perf_spline_cub.cpp  perf_spline_lin.cpp  perf_spline_par.cpp
src/: CMakeLists.txt  interpolation.c  slam.c
src/include/: interpolation.h  slam.h
src/interpolation/: init_buf.c
src/interpolation/legacy/ref/: lagrange.c  newton.c
src/interpolation/legacy/ref/rvv/: lagrange.asm  lagrange.c  newton_unequal.c
src/interpolation/ref/: lagrange.c  newton_equal.c  newton_unequal.c  spline_cub.c  spline_lin.c  spline_par.c
src/interpolation/rvv/: lagrange.c  newton_equal.c  newton_unequal.c  spline_cub.c  spline_lin.c  spline_par.c
src/interpolation/rvv/asm/: spline_cub.s  spline_lin.s  spline_par.s
src/interpolation/rvv/m1/: spline_cub.c  spline_lin.c  spline_par.c
src/interpolation/rvv/m1/asm/: spline_lin.s  spline_par.s
src/interpolation/rvv/m2/: spline_cub.c  spline_lin.c  spline_par.c
src/interpolation/rvv/m2/asm/: spline_cub.s  spline_lin.s  spline_par.s
src/interpolation/rvv/m4/: spline_cub.c  spline_lin.c  spline_par.c
src/interpolation/rvv/m4/asm/: spline_cub.s  spline_lin.s  spline_par.s
src/interpolation/rvv/m8/: spline_cub.c  spline_lin.c  spline_par.c
src/interpolation/rvv/m8/asm/: spline_cub.s  spline_lin.s  spline_par.s
src/slam/: init_buf.c
src/slam/ref/: conjugate_gradient.c  gauss_seidel.c  jacobi.c
src/slam/rvv/: jacobi.c
src/slam/rvv/m1/: conjugate_gradient.c  gauss_seidel.c  jacobi.c
src/slam/rvv/m1/asm/: conjugate_gradient.s  gauss_seidel.s  jacobi.s
src/slam/rvv/m2/: conjugate_gradient.c  gauss_seidel.c  jacobi.c
src/slam/rvv/m2/asm/: conjugate_gradient.s  gauss_seidel.s  jacobi.s
src/slam/rvv/m4/: conjugate_gradient.c  gauss_seidel.c  jacobi.c
src/slam/rvv/m4/asm/: conjugate_gradient.s  gauss_seidel.s  jacobi.s
src/slam/rvv/m8/: conjugate_gradient.c  gauss_seidel.c  jacobi.c
src/slam/rvv/m8/asm/: conjugate_gradient.s  gauss_seidel.s  jacobi.s
tests/: CMakeLists.txt  interpolation.cpp  slam.cpp
tests/include/: tests.h
tests/interpolation/ref/: test_lagrange.cpp  test_newton_equal.cpp  test_newton_unequal.cpp  test_spline_cub.cpp  test_spline_lin.cpp  test_spline_par.cpp
tests/interpolation/rvv/: test_lagrange.cpp  test_newton_equal.cpp  test_newton_unequal.cpp  test_spline_cub.cpp  test_spline_lin.cpp  test_spline_par.cpp
